# dongwhasoop

./: README.md
ai/fastapi-app/: .gitignore  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
ai/fastapi-app/db/: db.py  dependencies.py  models.py  utils.py
ai/fastapi-app/db/queries/: letters.py
ai/fastapi-app/kafka/: consumer.py  producer.py
ai/fastapi-app/kafka_utils/: consumer.py  producer.py  producer_sync.py
ai/fastapi-app/services/: global_task_queue.py  letters_service.py  openai_client.py  s3_utils.py  tts_service.py  tts_service_worker.py  tts_worker.py
ai/fastapi-app/zonos/: autoencoder.py  codebook_pattern.py  conditioning.py  config.py  model.py  sampling.py  speaker_cloning.py  utils.py
ai/fastapi-app/zonos/backbone/: __init__.py  _mamba_ssm.py  _torch.py
ai/fastapi-app/zonos_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
exec/: 동화숲_포팅메뉴얼.docx
frontend/: .gitignore  Dockerfile  Jenkinsfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/.github/: pull_request_template.md
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: authApi.ts  axiosInstance.ts  book.ts  bookcharacter.ts  children.ts  letter.ts  userVoice.ts
frontend/src/components/: Layout.tsx
frontend/src/data/: bookDetailDummy.ts  bookDummy.ts
frontend/src/hooks/: useAuth.ts  useBookCharacter.ts  useBooks.ts  useChildProfile.ts  useCreateChildProfile.ts  useLogin.ts  (+12 more)
server/: Jenkinsfile  build.gradle  dockerfile  settings.gradle
(+267 files in other folders)
